orphan-instance-lang/tests/parse-error/trait-trait.oil
trait trait { 
    fn foo() -> i32
}
